@@ -1,3 +1,6 @@
+2006-07-25  Alex Roitman  <shura@gramps-project.org>
+	* POTFILES.in: Add missing files.
+
 2006-07-23  Arturas Sleinius  <asleinius@gmail.com>
         * lt.po: updated Lithuanian translation.
 	
